fix; fix problem with appeared scrollbar

--- a/src/components/common/Select/Select.module.scss
+++ b/src/components/common/Select/Select.module.scss
@@ -23,7 +23,7 @@
   }
 
   .items {
-    max-height: 150px;
+    max-height: 120px;
     overflow-y: scroll;
     position: absolute;
     width: calc(100% + 8px);
